feat(new) add news section
add title and news__grid

Close

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!-- Banner Title-->
             <div class="container">
                 <div class="home__content">
-                    <h4>Khai mở trí tuệ thành công <p>sứ mệnh nâng tầm người việt trẻ</p></h4>
+                    <h1>Khai mở trí tuệ thành công <p>sứ mệnh nâng tầm người việt trẻ</p></h1>
                 </div>
                 <div class="home__toBottom">
                     <div class="toBottom__content">Kéo xuống</div>
@@ -88,14 +88,14 @@
         <!--  Section About Start -->
         <section id="sec2" class="about">
             <div class="about__content">
-                <h4 class="title">Về chúng tôi</h4>
+                <div class="title"><h2>Về chúng tôi</h2></div>
                 <div class="content">
                     <h5>Lorem ipsum dolor sit amet, consectetur adip- iscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas...</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
                 </div>
                 <button class="btn btn__see__more">Xem thêm</button>
             </div>
-            <div class="about__image" style="background-image: url('assets/img/_about/active.png')">
+            <div class="about__image" style="background-image: url('assets/img/_about/active.png');">
             </div>
         </section> <!--  Section About End -->
 
@@ -103,7 +103,7 @@
         <section class="introduce" >
             <div class="introduce__container" style="background-color: rgba(0, 0, 0, 0.5)">
                 <div class="introduce__container__content">
-                    <h4 class="title">Khoá học & sự kiện</h4>
+                    <div class="title"><h2>Khoá học & sự kiện</h2></div>
                     <div class="content">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
                     </div>
@@ -128,7 +128,7 @@
 
         <!--  Section Book Start -->
         <section id="sec3" class="book container">
-            <h4 class="title">Sách</h4>
+            <div class="title"><h2>Sách</h2></div>
             <div class="grid">
                 <div class="book__card">
                     <img src="assets/img/_book/book_01.png" alt="" class="book__image none__white">
@@ -199,7 +199,7 @@
             <div class="container">
                 <!--Title of Online section start-->
                 <div class="online__title">
-                    <h4 class="title">Khoá học online</h4>
+                    <div class="title"><h2>Khoá học online</h2></div>
                     <!-- Suggest view mode for User -->
                     <div class="suggest__course">
                         <a href="#suggest__most__view" class="suggest__course__link suggest__course__link__active">
@@ -300,6 +300,7 @@
             </div>
         </section> <!--  Section Online End -->
 
+        <!--  Section Event Start -->
         <section id="sec5" class="event">
             <div class="event__banner" style="background: url('assets/img/_event/event_offline.png')">
                 <div class="event__banner__content">
@@ -309,7 +310,7 @@
                 <button class="btn btn__sign__up__join">Đăng ký tham gia</button>
             </div>
             <div class="event__info">
-                <h4 class="event__info__title title">Sự kiện offline</h4>
+                <div class="event__info__title title"><h2>Sự kiện offline</h2></div>
                 <div class="event__info__grid">
                     <div class="grid__item">
                         <div class="date">
@@ -342,7 +343,76 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> <!--  Section Event End -->
+
+        <!--  Section Event Start -->
+        <section id="sec6" class="news container">
+            <div class="news__title title">
+                <h2>Tin tức</h2>
+            </div>
+            <div class="news__grid">
+                <div class="news__grid__card">
+                    <img src="assets/img/_news/news_01.png" alt="" class="card__header">
+                    <div class="card__body">
+                        <div class="date">
+                            <p class="day">15</p>
+                            <p class="month">08</p>
+                        </div>
+                        <div class="description">
+                            <p class="description__time"><i>Từ 9:00 đến 12:00</i></p>
+                            <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
+                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
+                            <a href="" class="description__footer see__more"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="news__grid__card">
+                    <img src="assets/img/_news/news_02.png" alt="" class="card__header">
+                    <div class="card__body">
+                        <div class="date">
+                            <p class="day">15</p>
+                            <p class="month">08</p>
+                        </div>
+                        <div class="description">
+                            <p class="description__time"><i>Từ 9:00 đến 12:00</i></p>
+                            <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
+                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
+                            <a href="" class="description__footer see__more"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="news__grid__card">
+                    <img src="assets/img/_news/news_03.png" alt="" class="card__header">
+                    <div class="card__body">
+                        <div class="date">
+                            <p class="day">15</p>
+                            <p class="month">08</p>
+                        </div>
+                        <div class="description">
+                            <p class="description__time"><i>Từ 9:00 đến 12:00</i></p>
+                            <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
+                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
+                            <a href="" class="description__footer see__more"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="news__grid__card">
+                    <img src="assets/img/_news/news_04.png" alt="" class="card__header">
+                    <div class="card__body">
+                        <div class="date">
+                            <p class="day">15</p>
+                            <p class="month">08</p>
+                        </div>
+                        <div class="description">
+                            <p class="description__time"><i>Từ 9:00 đến 12:00</i></p>
+                            <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
+                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
+                            <a href="" class="description__footer see__more"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> <!--  Section Event End -->
         
     </main>
     <!-- End Main -->
