style(news) style grid and margin of news section
change structure class of container
style grid and margin, background color of news section
change image news_04 to right size

Close

--- a/index.html
+++ b/index.html
@@ -346,74 +346,71 @@
         </section> <!--  Section Event End -->
 
         <!--  Section Event Start -->
-        <section id="sec6" class="news container">
-            <div class="news__title title">
-                <h2>Tin tức</h2>
-            </div>
-            <div class="news__grid">
-                <div class="news__grid__card">
-                    <img src="assets/img/_news/news_01.png" alt="" class="card__header">
-                    <div class="card__body">
-                        <div class="date">
-                            <p class="day">15</p>
-                            <p class="month">08</p>
-                        </div>
-                        <div class="description">
-                            <p class="description__time"><i>Từ 9:00 đến 12:00</i></p>
-                            <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
-                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
-                            <a href="" class="description__footer see__more"></a>
+        <section id="sec6" class="news">
+            <div class="container">
+                <div class="news__title title">
+                    <h2>Tin tức</h2>
+                </div>
+                <div class="news__grid">
+                    <div class="news__grid__card">
+                        <img src="assets/img/_news/news_01.png" alt="" class="card__header">
+                        <div class="card__body">
+                            <div class="date">
+                                <p class="day">15</p>
+                                <p class="month">08</p>
+                            </div>
+                            <div class="description">
+                                <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
+                                <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                                <a href="" class="description__footer see__more">Xem chi tiếts</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="news__grid__card">
-                    <img src="assets/img/_news/news_02.png" alt="" class="card__header">
-                    <div class="card__body">
-                        <div class="date">
-                            <p class="day">15</p>
-                            <p class="month">08</p>
-                        </div>
-                        <div class="description">
-                            <p class="description__time"><i>Từ 9:00 đến 12:00</i></p>
-                            <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
-                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
-                            <a href="" class="description__footer see__more"></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="news__grid__card">
-                    <img src="assets/img/_news/news_03.png" alt="" class="card__header">
-                    <div class="card__body">
-                        <div class="date">
-                            <p class="day">15</p>
-                            <p class="month">08</p>
-                        </div>
-                        <div class="description">
-                            <p class="description__time"><i>Từ 9:00 đến 12:00</i></p>
-                            <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
-                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
-                            <a href="" class="description__footer see__more"></a>
+                    <div class="news__grid__card">
+                        <img src="assets/img/_news/news_02.png" alt="" class="card__header">
+                        <div class="card__body">
+                            <div class="date">
+                                <p class="day">15</p>
+                                <p class="month">08</p>
+                            </div>
+                            <div class="description">
+                                <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
+                                <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                                <a href="" class="description__footer see__more">Xem chi tiết</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="news__grid__card">
-                    <img src="assets/img/_news/news_04.png" alt="" class="card__header">
-                    <div class="card__body">
-                        <div class="date">
-                            <p class="day">15</p>
-                            <p class="month">08</p>
+                    <div class="news__grid__card">
+                        <img src="assets/img/_news/news_03.png" alt="" class="card__header">
+                        <div class="card__body">
+                            <div class="date">
+                                <p class="day">15</p>
+                                <p class="month">08</p>
+                            </div>
+                            <div class="description">
+                                <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
+                                <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                                <a href="" class="description__footer see__more">Xem chi tiết</a>
+                            </div>
                         </div>
-                        <div class="description">
-                            <p class="description__time"><i>Từ 9:00 đến 12:00</i></p>
-                            <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
-                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
-                            <a href="" class="description__footer see__more"></a>
+                    </div>
+                    <div class="news__grid__card">
+                        <img src="assets/img/_news/news_04.png" alt="" class="card__header">
+                        <div class="card__body">
+                            <div class="date">
+                                <p class="day">15</p>
+                                <p class="month">08</p>
+                            </div>
+                            <div class="description">
+                                <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
+                                <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                                <a href="" class="description__footer see__more">Xem chi tiết</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section> <!--  Section Event End -->
-        
     </main>
     <!-- End Main -->
 
