feat(feedback) add feedback section, fix event section
write js in main.js to focus distance of elements
add elements of feedback section

Close

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                  <img class="toBottom__img" src="assets/img/_home/pull-down.png" alt="Pull down">
                 </div>
             </div>
-            <!--  background -->
+            <!--  background images-->
             <div class="home__background">
                 <!-- Background image -->
                 <div class="home__background__item" style="background-image: url('assets/img/_home/background.png')"></div>
@@ -90,8 +90,12 @@
             <div class="about__content">
                 <div class="title"><h2>Về chúng tôi</h2></div>
                 <div class="content">
-                    <h5>Lorem ipsum dolor sit amet, consectetur adip- iscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas...</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                    <h5>Lorem ipsum dolor sit amet, consectetur adip- iscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+                        maecenas...</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+                        maecenas accumsan lacus vel facilisis.</p>
                 </div>
                 <button class="btn btn__see__more">Xem thêm</button>
             </div>
@@ -105,7 +109,9 @@
                 <div class="introduce__container__content">
                     <div class="title"><h2>Khoá học & sự kiện</h2></div>
                     <div class="content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                            viverra maecenas accumsan lacus vel facilisis.</p>
                     </div>
                     <button class="btn btn__buy__course">Mua khoá học</button>
                 </div>
@@ -320,7 +326,9 @@
                         <div class="description">
                             <p class="description__time"><span>Free</span> <i>Từ 9:00 đến 12:00</i></p>
                             <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
-                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
+                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse
+                                ultrices gravida. Risus commodo ..</p>
                             <div class="description__sign__up__join transform__modal">
                                 <a href="#">Đăng ký tham gia <span></span></a>
                             </div>
@@ -335,7 +343,9 @@
                         <div class="description">
                             <p class="description__time"><span>Free</span> <i>Từ 9:00 đến 12:00</i></p>
                             <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
-                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
+                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse
+                                ultrices gravida. Risus commodo ..</p>
                             <div class="description__sign__up__join transform__modal">
                                 <a href="#">Đăng ký tham gia <span></span></a>
                             </div>
@@ -411,8 +421,42 @@
                 </div>
             </div>
         </section> <!--  Section Event End -->
+
+        <!--  Section Feedback Start -->
+        <section class="feedback">
+            <div class="feedback__content">
+                <div class="feedback__content__title title"><h2>Cảm nhận độc giả</h2></div>
+                <div class="feedback__content__body">
+                    <h3>Cảm nhận về sản phẩm Sổ Tay Bán Hàng</h3>
+                    <p class="feedback__text">Luôn mang theo bên mình cuốn cẩm nang xử lý từ chối trong bán hàng vì rất tiện sử dụng,
+                        bỏ túi được. Cuốn cẩm nan đưa ra tình huống chi tiết, những hướng giải quyết thông minh,
+                        gợi mở cho người đọc đưa ra ý tưởng xử lý từ chối hay. Khi biết nguyên nhân, bản chất của
+                        lời từ chối rồi nên tự tin hơn khi giải quyết.</p>
+                    <div class="feedback__signature">
+                        <p class="name">Nguyễn Duy Khanh</p>
+                        <p class="position">Trưởng nhóm kinh doanh tại Manulife (Quản lý gần 100 nhân viên)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="feedback__backgrounds">
+                <div class="feedback__background__item" style="background-image: url('assets/img/_feedback/feedback_user.png')"></div>
+                <div class="feedback__background__item" style="background-image: url('assets/img/_feedback/feedback_user.png')"></div>
+                <div class="feedback__background__item" style="background-image: url('assets/img/_feedback/feedback_user.png')"></div>
+                <div class="feedback__background__item" style="background-image: url('assets/img/_feedback/feedback_user.png')"></div>
+                <div class="feedback__background__item" style="background-image: url('assets/img/_feedback/feedback_user.png')"></div>
+                <div class="feedback__background__item" style="background-image: url('assets/img/_feedback/feedback_user.png')"></div>
+            </div>
+            <div class="buttons">
+                <a href="#"><img class="pause" src="assets/img/pause.png" alt="Pause"></a>
+                <a href="#" class="play"><i class="fas fa-play"></i></a>
+            </div>
+        </section>
+        <!--  Section Feedback End -->
     </main>
     <!-- End Main -->
+
+    <!-- Footer Start -->
+    <footer></footer>
 
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
