feat(footer) add footer
add and style elements of footer

Close

--- a/index.html
+++ b/index.html
@@ -456,7 +456,46 @@
     <!-- End Main -->
 
     <!-- Footer Start -->
-    <footer></footer>
+    <footer class="footer">
+        <div class="footer__grid container">
+            <div class="footer__grid__item contact">
+                <h4 class="contact__title">Liên hệ</h4>
+                <p class="contact__text"> 319 chung cư Thuận Việt, Lý Thường Kiệt, Phường 15, Quận 11, Tp.HCM, Việt Nam
+                    <br> +84 904 456 456
+                    <br> smartmoney@edu.com
+                </p>
+            </div>
+            <div class="footer__grid__item working__time">
+                <h4 class="working__time__title">Thời gian làm việc</h4>
+                <p class="working__time__content">
+                    Thứ hai - thứ sáu / 08:00 am - 21:00 pm
+                    <br> Thứ bảy / 09:00 - 12:00
+                    <br> Chủ nhật và ngày lễ nghỉ
+                </p>
+            </div>
+            <div class="footer__grid__item link">
+                <h4 class="link__title">Liên kết với chúng tôi</h4>
+                <div class="link__social">
+                    <span class="social__btn social__btn--blue btn">
+                        <i class="fab fa-facebook-f"></i>
+                        Facebook
+                    </span>
+                    <span class="social__btn social__btn--orange btn">
+                        <i class="fab fa-google-plus-g"></i>
+                        Google
+                    </span>
+                    <span class="social__btn social__btn--red btn">
+                        <i class="fab fa-youtube"></i>
+                        Youtube
+                    </span>
+                </div>
+            </div>
+            <p class="footer__grid__item signature">Designed and developed by Mona Media</p>
+        </div>
+        <div class="footer__image">
+            <img src="assets/img/_footer/shape.png" alt="Shape">
+        </div>
+    </footer> <!-- Footer End -->
 
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
