style(all page) add reponsive all page, fix line above title all page, add Roboto-Black font again, write js
add reponsive all page
fix line above title all page
add Roboto-Black font again
write js to scroll page, change size when screen change size
add Roboto-Black font again

Close

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 <div class="home__background__item" style="background-image: url('assets/img/_home/background.png')"></div>
             </div>
             <div class="buttons">
-                <a href="#"><img class="pause" src="assets/img/pause.png" alt="Pause"></a>
-                <a href="#" class="play"><i class="fas fa-play"></i></a>
+                <a href="#"><img class="pause pause__01" src="assets/img/pause.png" alt="Pause"></a>
+                <a href="#" class="play play__01"><i class="fas fa-play"></i></a>
             </div>
         </section>
         <!--  Section Home End -->
@@ -127,8 +127,8 @@
                 <div class="introduce__background__item" style="background-image: url('assets/img/_about/analytics.png')"></div>
             </div>
             <div class="buttons">
-                <a href="#"><img class="pause" src="assets/img/pause.png" alt="Pause"></a>
-                <a href="#" class="play"><i class="fas fa-play"></i></a>
+                <a href="#"><img class="pause__02" src="assets/img/pause.png" alt="Pause"></a>
+                <a href="#" class="play play__02"><i class="fas fa-play"></i></a>
             </div>
         </section> <!--  Section Introduce End -->
 
@@ -447,8 +447,8 @@
                 <div class="feedback__background__item" style="background-image: url('assets/img/_feedback/feedback_user.png')"></div>
             </div>
             <div class="buttons">
-                <a href="#"><img class="pause" src="assets/img/pause.png" alt="Pause"></a>
-                <a href="#" class="play"><i class="fas fa-play"></i></a>
+                <a href="#"><img class="pause pause__03" src="assets/img/pause.png" alt="Pause"></a>
+                <a href="#" class="play play__03"><i class="fas fa-play"></i></a>
             </div>
         </section>
         <!--  Section Feedback End -->
